--- a/contact_details.html
+++ b/contact_details.html
@@ -3,9 +3,10 @@
     <head>
         <meta charset="UTF-8">
         <title>My Contact Details</title>
+        <link rel="stylesheet" href="./css/styles.css">
     </head>
     <body>
-        <img src="Subhashish_photo.jpg">
+        <img src="./images/Subhashish_photo.jpg">
         <p>Name : Subhashish Dhar</p>
         <p>Address : Bangalore, India</p>
         <p>LinkedIn : <a href="https://www.linkedin.com/in/dharsubhashish/" target="_blank">Profile</a></p>
