--- a/index.html
+++ b/index.html
@@ -4,28 +4,38 @@
     <head>
         <meta charset="UTF-8">
         <title>My Personal Site</title>
+        <link rel="stylesheet" href="./css/styles.css">
     </head>
 
     <body>
-        <img src="https://qph.fs.quoracdn.net/main-thumb-10358082-200-HaTaT6J8Rn0ozqEJ1zpVu7NuBiGewO5m.jpeg" alt="Subhashish Dhar Profile Pic 1">
-        <h1>Subhashish Dhar</h1>
-        <p>
-            <em>
-                Staff Software Engineer at <a href="https://www.netskope.com/" target="_blank"><strong>Netskope</strong></a>
-                <br>
-                Department - <strong>QE</strong>
-                <br>
-                Location - <strong>Bangalore</strong>
-            </em>
-        </p>
-        <p>
-            10 years of experience in the digital transport and networking industry with expertise in network security
-            protocols, working towards delivering quality software features related to optical transport, L2/L3/L7
-            applications and network security. In-depth/hands-on experience in product validation based on
-            ITU-T/IEEE/NIST standards, starting from product requirement review, test strategy preparation and
-            execution, system performance verification etc. Looking for a new and challenging network engineering
-            position, one that will make best use of my existing skills and experience, and further my development.
-        </p>
+        <table cellspacing="20">
+            <tr>
+                <td>
+                    <img src="https://qph.fs.quoracdn.net/main-thumb-10358082-200-HaTaT6J8Rn0ozqEJ1zpVu7NuBiGewO5m.jpeg" alt="Subhashish Dhar Profile Pic 1">
+                </td>
+                <td>
+                    <h1>Subhashish Dhar</h1>
+                    <p>
+                        <em>
+                            Staff Software Engineer at <a href="https://www.netskope.com/" target="_blank"><strong>Netskope</strong></a>
+                            <br>
+                            Department - <strong>QE</strong>
+                            <br>
+                            Location - <strong>Bangalore</strong>
+                        </em>
+                    </p>
+                    <p>
+                        10 years of experience in the digital transport and networking industry with expertise in network security
+                        protocols, working towards delivering quality software features related to optical transport, L2/L3/L7
+                        applications and network security. In-depth/hands-on experience in product validation based on
+                        ITU-T/IEEE/NIST standards, starting from product requirement review, test strategy preparation and
+                        execution, system performance verification etc. Looking for a new and challenging network engineering
+                        position, one that will make best use of my existing skills and experience, and further my development.
+                    </p>
+                </td>
+            </tr>
+        </table>
+
         <hr>
         <h3>Education</h3>
         <ul>
