styled web page

--- a/index.html
+++ b/index.html
@@ -1,63 +1,61 @@
 <!DOCTYPE html>
 <html lang="en">
-
     <head>
         <meta charset="UTF-8">
-        <title>My Personal Site</title>
+        <title>Subhashish Dhar</title>
         <link rel="stylesheet" href="./css/styles.css">
+        <link rel="icon" href="favicon.ico">
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300&family=PT+Sans&family=Sacramento&display=swap" rel="stylesheet">
     </head>
-
     <body>
-        <table cellspacing="20">
-            <tr>
-                <td>
-                    <img src="https://qph.fs.quoracdn.net/main-thumb-10358082-200-HaTaT6J8Rn0ozqEJ1zpVu7NuBiGewO5m.jpeg" alt="Subhashish Dhar Profile Pic 1">
-                </td>
-                <td>
-                    <h1>Subhashish Dhar</h1>
-                    <p>
-                        <em>
-                            Staff Software Engineer at <a href="https://www.netskope.com/" target="_blank"><strong>Netskope</strong></a>
-                            <br>
-                            Department - <strong>QE</strong>
-                            <br>
-                            Location - <strong>Bangalore</strong>
-                        </em>
-                    </p>
-                    <p>
-                        10 years of experience in the digital transport and networking industry with expertise in network security
-                        protocols, working towards delivering quality software features related to optical transport, L2/L3/L7
-                        applications and network security. In-depth/hands-on experience in product validation based on
-                        ITU-T/IEEE/NIST standards, starting from product requirement review, test strategy preparation and
-                        execution, system performance verification etc. Looking for a new and challenging network engineering
-                        position, one that will make best use of my existing skills and experience, and further my development.
-                    </p>
-                </td>
-            </tr>
-        </table>
 
-        <hr>
-        <h3>Education</h3>
-        <ul>
-            <li>National Institute of Technology, Kurkshetra</li>
-                <ul>
-                    <li>Bachelor of Technology - <strong>CGPA-8.9</strong></li>
-                </ul>
-            <li>Kendriya Vidyalaya, New Bongaigaon</li>
-                <ul>
-                    <li>Class XII - <strong>94%</strong></li>
-                    <li>Class X - <strong>92.2%</strong></li>
-                </ul>
-        </ul>
-        <hr>
-        <h3>Hobbies</h3>
-        <ol>
-            <li><a href="https://github.com/subhashish06" target="_blank">Coding</a></li>
-            <li>Travelling</li>
-            <li>Playing</li>
-            <li>Reading</li>
-        </ol>
-        <h3><a href="contact_details.html">Contact Me</a></h3>
+        <div class="top" >
+            <img id="cloud1" src="./images/cloud.png">
+            <h1>I'm Subhashish.</h1>
+            <h2 id="tagline"><span>Network</span> | <span>Security</span> | <span>Cloud</span></h2>
+            <img id="cloud2" src="./images/cloud.png">
+            <img id="mountain" src="./images/mountain.png">
+        </div>
+
+        <div class="middle">
+          <div class="profile">
+            <img class="profile_pic" src="./images/my_pic.png" alt="profile_pic">
+            <h2>Hello.</h2>
+            <p class="texts">I am a software engineer working in the network and cloud security domain.</p>
+          </div>
+          <hr>
+          <div class="skills">
+            <h2>My Skills.</h2>
+            <div class="skill-row">
+              <img class="skill1" src="./images/cyber.png" alt="cyber pic">
+              <h3>Cyber Security</h3>
+              <p>Experienced in access-control, IPS, IDS and cloud firewalls. Worked as a customer scenario test engineer at Netskope. As a staff software engineer at Netskope, I do manual and automated tests of all features that are intended for some of the biggest customers we have.</p>
+            </div>
+            <div class="skill-row">
+              <img class="skill2" src="./images/cloud-network.png" alt="cloud pic">
+              <h3>Cloud Networks</h3>
+              <p>Worked on major cloud storage and compute providers like GCP, Azure and AWS. Particularly trained in looking for cloud security vulnerabilities including data leak preventions and misconfigurations.</p>
+            </div>
+          </div>
+          <hr>
+          <div class="contact-me">
+            <h2>Get In Touch</h2>
+            <h3>Passionate about cybersecurity?</h3>
+            <p class="contact-para">If you are passionate about securing the data in our networks which is rapidly moving to the clouds, let's connect and brainstorm.</p>
+            <iframe src="https://giphy.com/embed/ePbYFsxt7gb1CXLloL" width="200" height="200" frameBorder="0" class="giphy-embed" allowFullScreen></iframe>
+            <p><a class="btn" href="mailto:subhashish06@gmail.com">CONTACT ME</a></p>
+          </div>
+        </div>
+
+        <div class="bottom">
+          <a class="footer-link" href="https://www.linkedin.com/in/dharsubhashish/" target="_blank">LinkedIn</a>
+          <a class="footer-link" href="https://www.facebook.com/subhashish.dhar" target="_blank">Facebook</a>
+          <a class="footer-link" href="https://github.com/subhashish06" target="_blank">Github</a>
+          <p class="white-text">© 2021 Subhashish Dhar.</p>
+          <p class="white-text">Icons made by <a href="https://www.freepik.com" title="Freepik">Freepik</a> from <a href="https://www.flaticon.com/" title="Flaticon">www.flaticon.com</a></p>
+        </div>
+
     </body>
-
 </html>
